--- a/appspec.yml
+++ b/appspec.yml
@@ -7,10 +7,10 @@ files:
     destination: /var/www/BSTests/
 hooks:
   BeforeInstall:
-    - location: scripts/install_dependencies.sh
+    - location: op.sh BeforeInstall
       timeout: 300
       runas: ec2-user
   AfterInstall:
-    - location: scripts/bstest_script.sh
+    - location: op.sh AfterInstall
       timeout: 300
       runas: ec2-user
