--- a/appspec.yml
+++ b/appspec.yml
@@ -7,10 +7,10 @@ files:
     destination: /var/www/BSTests/
 hooks:
   BeforeInstall:
-    - location: op.sh BeforeInstall
+    - location: scripts/BeforeInstall.sh
       timeout: 300
       runas: ec2-user
   AfterInstall:
-    - location: op.sh AfterInstall
+    - location: scripts/AfterInstall.sh
       timeout: 300
       runas: ec2-user
