--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,6 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
-    - run: npm i
-    - run: npm run build --if-present
-    - run: sudo mv /home/ec2-user/tmp/actions-runner/_work/funding-vue/funding-vue/dist /usr/share/nginx/html_box/dist.${GITHUB_REF#refs/heads/}.${GITHUB_SHA}
-    - run: sudo ln -snf  /usr/share/nginx/html_box/dist.${GITHUB_REF#refs/heads/}.${GITHUB_SHA}/*  /usr/share/nginx/html
+    - run: pwd
+    - run: /home/ec2-user/tmp/actions-runner/_work/funding-vue/funding-vue/op.sh build
+    - run: /home/ec2-user/tmp/actions-runner/_work/funding-vue/funding-vue/op.sh deploy
