--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,5 +7,6 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
-    - run: sudo ./op.sh build
-    - run: sudo ./op.sh deploy
+    - run: chmod +x op.sh
+    - run: ./op.sh build
+    - run: ./op.sh deploy
