update test config

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy CI
+name: Build、Deploy and Test CI
 on:
   push:
     branches: [ test ]
@@ -8,6 +8,16 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: chmod +x op.sh
-    - run: ./op.sh build
-    - run: ./op.sh deploy
-    - run: ./op.sh test
+    - name: build and deploy
+    - run: |
+        ./op.sh build
+        ./op.sh deploy
+    - name: pytest with selenium in browserstack
+    - run: |
+        pytest BSTests/test.py --html=/home/ec2-user/reports/${GITHUB_REF#refs/heads/}.${github.event.commits[0].message}.${GITHUB_SHA}.report.html 
+    - name: Print the report
+      if: always()
+      # shell: bash
+      run: |
+        value=`cat /home/ec2-user/reports/${GITHUB_REF#refs/heads/}.${github.event.commits[0].message}.${GITHUB_SHA}.report.html`
+        echo The result is $value
