--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,11 +9,11 @@ jobs:
     - uses: actions/checkout@v2
     - run: chmod +x op.sh
     - name: build and deploy
-    - run: |
+      run: |
         ./op.sh build
         ./op.sh deploy
     - name: pytest with selenium in browserstack
-    - run: |
+      run: |
         pytest BSTests/test.py --html=/home/ec2-user/reports/${GITHUB_REF#refs/heads/}.${github.event.commits[0].message}.${GITHUB_SHA}.report.html 
     - name: Print the report
       if: always()
